--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.2",
     "path": "^0.12.7"
