--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
