--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.30.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
