--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.348.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "2.10.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.2",
     "path": "^0.12.7"
